# cheat-sheet

./: LICENSE  README.md  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  objects.inv  python.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  python.doctree
docs/_sources/: index.rst.txt  python.md.txt
docs/source/: conf.py  django.md  index.rst
