[tool.poetry]
name = "cheat-sheet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
